# MyCookbook

./: .gitignore  docker-compose-dev.yml  pyproject.toml  ruff.toml
.cursor/: settings.json
consumer/: main.py  parser.py
consumer/core/: config.py  database.py  exceptions.py
consumer/llm/: agents.py  llm_states.py
consumer/recipe_chroma_db/: chroma.sqlite3
consumer/utils/: create_chromadb.py  parser.py  preparation_docs.py  search.py
consumer/vectoring/models/: chroma.py
src/: main.py
src/bot/: commands.py  parser.py
src/bot/handlers/: chat_member.py  chat_recipe.py  start.py
src/core/: config.py  database.py  exceptions.py
src/graph/: graph.py  state.py  utils.py
src/llm/: agents.py  llm_states.py
src/models/: mongodb.py
src/utils/: parsing.py
