[project]
name = "mycookbook"
version = "0.1.0"
description = ""
authors = [
    {name = "Станислав Рубцов",email = "frexrub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "async-pymongo (>=0.1.11,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.2"

