[project]
name = "mycookbook"
version = "0.1.0"
description = ""
authors = [
    {name = "Станислав Рубцов",email = "frexrub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-text-splitters (>=0.3.11,<1.0.0)",  # важно для устранения конфликта
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "async-pymongo (>=0.1.11,<0.2.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "faststream[rabbit] (>=0.6.2,<0.7.0)",
    "torch (>=2.9.0,<3.0.0)",
    "chromadb (>=1.2.1,<2.0.0)",
    "langchain-huggingface (<1.0.0)",
    "langchain-chroma (<1.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "huggingface-hub[hf-xet] (>=0.36.0,<0.37.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.2"
mypy = "^1.18.2"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
